fixed issue with undefined situations and overflowing content

--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,7 @@ body {
 .top-nav {
   display: flex;
   justify-content: space-between;
+  flex-shrink: 0;
 }
 
 .digital-clock {
